log
Fri 23 Sep 2022 03:36:23 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
afffd1d
Fri 23 Sep 2022 04:07:30 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:1: error: expected ‘(’ before ‘}’ token
   60 | }
      | ^
      | (
Compilation failed
773bfe4
Fri 23 Sep 2022 04:07:46 PM UTC: 
 treemap.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  11|6
total_score: 15/70
fbafb60
Fri 23 Sep 2022 04:10:02 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:53:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   53 |   if (x = NULL)return NULL;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
b0f2816
Fri 23 Sep 2022 04:10:10 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
4bec905
Fri 23 Sep 2022 04:36:28 PM UTC: 
 treemap.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
 tests:  14|5
total_score: 15/70
0b16187
Fri 23 Sep 2022 04:37:21 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  15|4
total_score: 25/70
25c9fdc
Sun 25 Sep 2022 05:00:44 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
cfaa09a
